tests/paczka1/fuzzy1/56943625.err
Error in line 1: b1gmH4E7 S287 35,1
Error in line 4: NOlwV S287 1,1
Error in line 11: zJCTzk6XB A825 63,3
Error in line 26: zJCTzk6XB S287 16,6
Error in line 37: 5Uov40KpYoT A434 91,4
